--- a/monitoring_v1_case (2).ipynb
+++ b/monitoring_v1_case (2).ipynb
@@ -9,10 +9,10 @@
    },
    "outputs": [],
    "source": [
-    "PROJECT_ID = \"dev-amer-analyt-vertex-svc-aa\"  \n",
+    "PROJECT_ID = \"<project id>\"  \n",
     "LOCATION = \"us-east1\" \n",
-    "USER_EMAIL = \"abhishek.patil3@fractal.ai\"  \n",
-    "BUCKET_URI = f\"gs://dev-amer-analyt-vertex-svc-aa-vertex-staging-us-central1/data_drift\" \n"
+    "USER_EMAIL = \"<user email>\"  \n",
+    "BUCKET_URI = f\"<bucket url>\" \n"
    ]
   },
   {
